...
            android:text="Sort Order:"
            android:textSize="18sp">

        </TextView>

        <TextView
            android:id="@+id/sort_by_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_toLeftOf="@id/sort_option_spinner"
            android:fontFamily="sans-serif-black"
            android:text="Sort by:"
            android:textSize="18sp">

        </TextView>

...
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            />

        <ImageButton
            android:id="@+id/sort_order_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:layout_centerVertical="true"
            android:layout_toLeftOf="@+id/sort_by_title"
            android:layout_toRightOf="@id/generic_collection_title"
...
        android:layout_height="match_parent"

        android:paddingStart="10sp"
        android:paddingEnd="10sp">

        <ListView
            android:id="@+id/generic_collection_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="5dp"
            android:layout_marginBottom="0dp"
...
