...
    <string name="EditRecipeButtonName">Edit</string>
    <string name="categoryInRecipe"><b>Category: </b></string>
    <string name="recipeBackButtonText">Save</string>
    <string name="recipeDeleteButtonText">Delete</string>
    <!-- RECIPE SORT OPTION STRINGS-->
    <string name="sort_by_title">Title</string>
    <string name="sort_by_preptime">Prep Time</string>
    <string name="sort_by_category">Category</string>
    <string name="description">description</string>
    <string name="ingredients_description">ingredients_description</string>
    <string name="amount_needed_for_the_recipe">amount_needed_for_the_recipe</string>
    <string name="ingredients_amount">ingredients_amount</string>
    <string name="unit">unit</string>
    <string name="ingredients_unit">ingredients_unit</string>
...
