...
            android:text="Prep time"
            android:textColor="#000000"
            android:layout_marginStart="67dp"
            app:layout_constraintEnd_toStartOf="@+id/recipe_servings_in_collection"
            app:layout_constraintHorizontal_weight="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/recipe_title_in_collection" />

        <TextView
            android:id="@+id/recipe_title_in_collection"
            android:layout_width="325dp"
            android:layout_height="wrap_content"
            android:text="title"
...
